# ai-higress-gateway

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  Makefile  README.md  README.zh.md  docker-compose.develop.yml  docker-compose.images.yml  docker-compose.yml  main.py  package.json  provider-presets.json  pyproject.toml  replacements.txt  test.txt  todo.md  ui-prompt.md
.github/: dependabot.yml
.github/workflows/: backend.yml  bridge-gateway-docker-publish.yml  bridge-release.yml  codeql.yml  docker.deploy.yml
.specify/memory/: constitution.md
alembic/versions/: 0005_add_provider_type.py  0006_add_api_key_provider_restrictions.py
app/: __init__.py  auth.py  context_store.py  deps.py  errors.py  jwt_auth.py  logging_config.py  logical_model_routes.py  model_cache.py  provider_routes.py  redis_client.py  routes.py  routing_routes.py  session_routes.py  upstream.py
app/api/: auth_routes.py  system_routes.py
app/models/: __init__.py  api_key.py  api_key_allowed_provider.py  logical_model.py  model.py  provider.py  routing_metrics.py  scheduling.py  session.py
app/provider/: __init__.py  config.py  discovery.py  (+5 more)
backend/: Dockerfile  celerybeat-schedule  celerybeat-schedule-shm  celerybeat-schedule-wal  entrypoint.sh  main.py  pyproject.toml  pytest.ini  tmp.db
bridge/: Dockerfile.gateway  go.mod  go.sum
docs/: API_Documentation.md  CHANGELOG-env-sync.md  QUICK-START.md  admin-permission-management.md  claude-code-cli-simulation.md  claude_fallback_plan.md  configuration.md  key-management.md  metrics_optimization.md  model-routing-design.md  pwa-desktop-installation-plan.md  session-context-design.md
frontend/: .eslintignore  CODE_QUALITY_QUICK_REFERENCE.md  README.md  eslint.config.mjs  fix-all-unused-imports.sh  fix-typescript-errors.sh  fix-unused-imports.sh  fix-unused-vars.py  middleware.ts  next.config.ts  package-lock.json  package.json  tsconfig.json  vitest.setup.ts
redis/: redis.conf
scripts/: check_models.py  generate_django_secret_key.py  generate_secret_key.sh  list_models.py  sync-frontend-env.sh  test_provider_chat.py
service/: __init__.py  auth.py  context_store.py  deps.py  logging_config.py  model_cache.py  routes.py  routing_routes.py  settings.py  upstream.py
tests/: README_TESTS.md  async_greeting_test.py  conftest.py  test_api_key_routes.py  test_auth.py  test_chat_greeting.py  test_models_route.py  utils.py
(+809 files in other folders)
