[project]
name = "apiproxy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "redis>=5.0.0",
    "pydantic-settings>=2.3.0",
    "pytest>=9.0.1",
    "pytest-asyncio>=0.23.0", # Added for async tests
]

[project.scripts]
apiproxy = "main:run"
